          These buttons appear just right of the message input area (and left of the avatar, if
          present) and are independent of the toolbar setting.

        + added support for IEViews "save message log as html" feature. Choose File->Save Message
          Log As..." from the menubar.
          
Version 0.9.9.94 - 2005/04/11

        * small fix with static avatars and toolbar button hiding.

        + added support for the Math Module plugin. Requires recent MathModule
          version. MathMod support can be activated on the Message Log options
          page (only, if the plugin is active, otherwise the option is grayed out)
          
        * attempt to fix a rich edit "feature" which may sometimes  automatically change 
          input locale (keyboard layout).

Version 0.9.9.93 - 2005/04/11

        * updated translation template, added german translation
        
        * some option pages updated (conditionally enable/disable controls)
        
        * removed unused "Sound" submenu from the menu bar.
        
        * icon descriptions for IcoLib are now translateable (see the section at the
          end of the language template).
          
        + added MS_MSG_GETWINDOWAPI ("MessageAPI/WindowAPI") service for Message 
          API 0.0.0.2 specs
        
        * when using the "Send Later" send mode, a log message informs you about
          successfully passing the message over to buddypounce. If using IEView, the
          message is printed to the status bar instead.
          
        * MetaContacts support - the status icons in the title bar and on the tool
          bar are now showing the actual protocol icons. Also, smileyadd will now use
          the smiley set which has been configured for the actual protocol. No more
          need to define an extra smiley set for the MetaContacts protocol (does not
          work with IEView though, because IEView does its smiley selection alone).
          